--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
     <section class="hero">
         <div class="hero-content">
             <h1>Timeless Elegance, Modern Sophistication</h1>
-            <p>Discover our curated collection of luxury pieces that blend traditional craftsmanship with contemporary design.(We will adjust any text, colors, fonts and designs on the website to your needs. This is just a preview)</p>
+            <p>Discover our curated collection of luxury pieces that blend traditional craftsmanship with contemporary design.</p>
             <a href="#" class="hero-btn">Explore Collections</a>
         </div>
         <img src="https://images.unsplash.com/photo-1551232864-3f0890e580d9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1287&q=80" alt="Luxury boutique interior" class="hero-image">
@@ -709,7 +709,7 @@
     <section class="section">
         <div class="section-title">
             <h2>Featured Collection</h2>
-            <p>Our carefully selected pieces for the season(Sample of products you may list.Your users can buy your products and securely pay you online here)</p>
+            <p>Our carefully selected pieces for the season</p>
         </div>
         
         <div class="products-grid">
@@ -773,7 +773,7 @@
     <section class="testimonials">
         <div class="section-title">
             <h2>Client Testimonials</h2>
-            <p>What our clients say about us(Your customers can leave reviews on your website. You get to asees tyhem and allow which reviews to show on your website)</p>
+            <p>What our clients say about us</p>
         </div>
         
         <div class="testimonials-container">
@@ -896,7 +896,7 @@
                 <h4>Contact(We will put your real contact details here)</h4>
                 <ul class="footer-links">
                     <li><a href="tel:+18005551234">+1 (800) 555-1234</a></li>
-                    <li><a href="mailto:info@boutiqueelegance.com">info@boutiqueelegance.com</a></li>
+                    <li><a href="mailto:info@boutiqueelegance.com">info@haklimfashions.com</a></li>
                     <li>123 Luxury Avenue<br>New York, NY 10001</li>
                 </ul>
             </div>
