--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
             
             <!-- Column 4 -->
             <div class="footer-col">
-                <h4>Contact(We will put your real contact details here)</h4>
+                <h4>Contact</h4>
                 <ul class="footer-links">
                     <li><a href="tel:+18005551234">+1 (800) 555-1234</a></li>
                     <li><a href="mailto:info@boutiqueelegance.com">info@haklimfashions.com</a></li>
